[package]
name = "eventador"
version = "0.0.2"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "lock-free pub/sub event-bus based on the LMAX disruptor pattern"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-channel = "1.5.1"
crossbeam-epoch = "0.9.1"
crossbeam-utils = "0.8.1"
futures = "0.3.12"
lockfree = "0.5.1"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
