[package]
name = "eventador"
version = "0.0.6"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "lock-free sync and async pub/sub event-bus based on the LMAX disruptor pattern"
keywords = ["pub-sub", "lock-free", "event-bus", "event", "disruptor"]
categories = ["asynchronous", "caching", "concurrency", "data-structures"]
repository = "https://github.com/sachanganesh/eventador-rs"
documentation = "https://docs.rs/eventador/"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/*"
]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = ["tokio1"] }
crossbeam = "0.8.0"
futures = "0.3.12"
lockfree = "0.5.1"

[dev-dependencies]
async-channel = "1.5.1"
async-std = { version = "1.9.0", features = ["attributes"] }
ntest = "0.7.3"
