[package]
name = "eventador"
version = "0.0.18"
edition = "2018"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
description = "lock-free pub/sub event-bus with sync and async APIs"
keywords = ["pub-sub", "lock-free", "event-bus", "event", "disruptor"]
categories = ["asynchronous", "caching", "concurrency", "data-structures"]
repository = "https://github.com/sachanganesh/eventador-rs"
documentation = "https://docs.rs/eventador/"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.docs.rs]
features = ["async"]
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/*"
]

[features]
async = ["async-std", "async-stream", "futures"]


[dependencies]
anyhow = "1.0"
crossbeam = "0.8.0"
lockfree = "0.5.1"

futures = { version = "0.3.12", optional = true }
async-std = { version = "1.9.0", features = ["tokio1"], optional = true }
async-stream = { version = "0.3.0", optional = true }

[dev-dependencies]
async-channel = "1.5.1"
async-std = { version = "1.9.0", features = ["attributes"] }
ntest = "0.7.3"
