[package]
name = "seam-disruptor"
version = "0.0.1"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-channel = "1.4"
async-std = { version = "1.6" }
crossbeam-epoch = "0.8.2"
crossbeam-utils = "0.7.2"
lockfree = "0.5.1"