[package]
name = "stitch-channel"
version = "0.1.0"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-channel = "1.4.0"
async-std = "1.6.2"
async-tls = {version = "0.9.0", default-features = false, features = ["client"]}
bincode = "1.3.1"
bytes = "0.5.5"
futures-util = "0.3.5"
log = "0.4"
#mio = { version = "0.7.0", features = ["os-poll", "tcp"] }
rustls = "0.18.0"
serde = "1.0.112"
