[package]
name = "stitch-q"
version = "0.1.0"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
async-std = "1.6.2"
bincode = "1.2.1"
bytes = "0.5.5"
crossbeam-channel = "0.4.2"
mio = { version = "0.7.0", features = ["os-poll", "tcp"] }
serde = "1.0.112"
