[package]
name = "async-eventador"
version = "0.1.0"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = ["attributes"] }
eventador = { path = "../../", features = ["async"] }