[package]
name = "tls-client"
version = "0.1.0"
authors = ["Sachandhan Ganesh <sachan.ganesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.7"
log = "0.4"

seam-channel = { path = "../../" }